<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SHActivity">

    <TextView
        android:layout_marginBottom="10dp"
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/t1"
        tools:layout_editor_absoluteX="9dp"
        tools:layout_editor_absoluteY="19dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/t2"
        tools:layout_editor_absoluteX="9dp"
        tools:layout_editor_absoluteY="40dp" />

    <EditText
        android:id="@+id/etname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="2dp"
        tools:layout_editor_absoluteY="81dp"
        android:autofillHints="" />

    <TextView
        android:layout_marginBottom="10dp"
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/t3"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="171dp" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rbyes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/yes"
            tools:layout_editor_absoluteX="9dp"
            tools:layout_editor_absoluteY="219dp" />

        <RadioButton
            android:id="@+id/rbno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no"
            tools:layout_editor_absoluteX="9dp"
            tools:layout_editor_absoluteY="266dp" />

    </RadioGroup>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/t4" />

    <EditText
        android:id="@+id/etwait"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="-5dp"
        tools:layout_editor_absoluteY="331dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="302dp">

        <Button
            android:id="@+id/btsave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/tt1" />

        <Button
            android:id="@+id/btload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/tt2" />

        <Button
            android:id="@+id/btdefault"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/tt3" />
    </LinearLayout>

</LinearLayout>