<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".ESActivity">

    <ImageView
        android:id="@+id/esphoto"
        android:layout_width="wrap_content"
        android:layout_height="302dp"
        android:layout_weight="1"
        app:srcCompat="@drawable/one" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnSavePublic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnSavePublic" />

        <Button
            android:id="@+id/btnSavePerivate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnSavePerivate" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvmsg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvmsg" />

</LinearLayout>